include/slang/c/slang.h

/* ------------------------------------------------------------------------- */
/* Status and errors                                                          */
/* ------------------------------------------------------------------------- */

/// Result of a fallible call. Negative values are warnings (the call succeeded),
/// zero is unqualified success, positive values are failures.
typedef enum slang_status {
    /// The result was truncated to fit the caller's buffer.
    SLANG_WARN_TRUNCATED = -2,
    /// The call succeeded but could only partially do what was asked.
    SLANG_WARN_PARTIAL = -1,

    SLANG_OK = 0,

    /// A file could not be read or written.
    SLANG_ERR_IO = 1,
    /// An argument was null, out of range, or otherwise invalid.
    SLANG_ERR_INVALID_ARG = 2,
    /// The object is in the wrong state for this operation (e.g. adding a tree
    /// to a compilation that has already been finalized).
    SLANG_ERR_INVALID_STATE = 3,
    /// The parser gave up on pathologically nested input.
    SLANG_ERR_PARSE_RECURSION = 4,
    /// A syntax tree rewrite was rejected (e.g. two edits to one node).
    SLANG_ERR_REWRITE = 5,
    /// Memory allocation failed.
    SLANG_ERR_OUT_OF_MEMORY = 6,
    /// This build of the library does not support the operation.
    SLANG_ERR_UNSUPPORTED = 7,
    /// The caller and the library disagree about the schema (see
    /// slang_syntax_model_hash) or the C API version.
    SLANG_ERR_ABI_MISMATCH = 8,
    /// A traversal was cancelled by a callback or a cancellation request.
    SLANG_ERR_CANCELLED = 9,
    /// A C++ exception with no more specific mapping was caught.
    SLANG_ERR_INTERNAL = 100,
} slang_status;
/// The in/out error record passed as the last parameter of fallible calls.
/// Initialize with SLANG_ERROR_INIT (or zero-fill). On failure `message` holds a
/// NUL-terminated human-readable explanation, truncated to fit.
typedef struct slang_error {
    slang_status status;
    char message[248];
} slang_error;
/* ------------------------------------------------------------------------- */
/* Strings                                                                    */
/* ------------------------------------------------------------------------- */

/// A string view. `data` is NOT NUL-terminated. When `owner` is null the bytes
/// are borrowed from some slang object and slang_str_free is a no-op; when
/// `owner` is non-null the caller owns the bytes and must call slang_str_free.
typedef struct slang_str {
    const char* data;
    size_t len;
    void* owner;
} slang_str;
/// A half-open [start, end) range of locations within one buffer.
typedef struct slang_range {
    slang_loc start;
    slang_loc end;
} slang_range;
/* ------------------------------------------------------------------------- */
/* Owners                                                                     */
/* ------------------------------------------------------------------------- */

typedef struct slang_source_manager_t* slang_source_manager;
typedef struct slang_syntax_tree_t* slang_syntax_tree;
typedef struct slang_compilation_t* slang_compilation;
typedef struct slang_diagnostics_t* slang_diagnostics;
/// An elaborated AST node within a compilation. Trivially copyable; valid while
/// `compilation` is alive. Types are symbols (domain SLANG_AST_SYMBOL).
typedef struct slang_ast {
    const void* ptr;
    slang_compilation compilation;
    uint32_t kind;
    uint32_t domain;
} slang_ast;
/* ------------------------------------------------------------------------- */
/* Driver                                                                     */
/* ------------------------------------------------------------------------- */

/// A driver bundles slang's standard command line (file lists, `-I`, `-D`,
/// `--top`, `-W...`, diagnostics formatting, ...) with the source manager,
/// syntax trees and compilation it produces, exactly as the `slang` binary
/// does. Tools that want to accept the same flags as slang use this instead of
/// assembling options by hand.
typedef struct slang_driver_t* slang_driver;
/// Creates a driver with slang's standard arguments registered.
SLANG_C_API slang_driver slang_driver_create(slang_error* err);
/// Destroys a driver, its source manager, its trees, and any compilation it
/// created; positions obtained from any of them become invalid.
SLANG_C_API void slang_driver_destroy(slang_driver driver);
/// The value type of a custom command-line option.
typedef enum slang_option_kind {
    /// A boolean switch (`--flag` / `--no-flag`).
    SLANG_OPTION_FLAG = 0,
    SLANG_OPTION_INT = 1,
    SLANG_OPTION_STRING = 2,
} slang_option_kind;
/// Registers a custom option. `names` is a comma-separated list of spellings,
/// e.g. "-h,--help"; the same string is used to read the value back.
/// `value_name` (e.g. "<depth>") is shown in help text and may be empty.
SLANG_C_API void slang_driver_add_option(slang_driver driver, const char* names, size_t names_len,
                                         slang_option_kind kind, const char* description,
                                         size_t description_len, const char* value_name,
                                         size_t value_name_len, slang_error* err);
/// Parses a command line (argv[0] is the program name). Returns false if the
/// arguments were invalid; the driver has already printed why.
SLANG_C_API bool slang_driver_parse_args(slang_driver driver, int argc, const char* const* argv,
                                         slang_error* err);
/// Reads back a custom option. Each returns false if the option was not given
/// on the command line (`*out` is untouched). String values are borrowed from
/// the driver.
SLANG_C_API bool slang_driver_option_flag(slang_driver driver, const char* names, size_t names_len,
                                          bool* out);
SLANG_C_API bool slang_driver_option_int(slang_driver driver, const char* names, size_t names_len,
                                         int64_t* out);
SLANG_C_API bool slang_driver_option_string(slang_driver driver, const char* names,
                                            size_t names_len, slang_str* out);
/// The formatted help text for all registered options. Owned.
SLANG_C_API slang_str slang_driver_help_text(slang_driver driver, const char* overview,
                                             size_t overview_len, slang_error* err);
/// Applies the parsed options (include paths, defines, ...). Returns false on
/// an error, which the driver has already reported.
SLANG_C_API bool slang_driver_process_options(slang_driver driver, slang_error* err);
/// Loads and parses every source file named on the command line. Returns
/// false if any file had errors (they are reported later).
SLANG_C_API bool slang_driver_parse_sources(slang_driver driver, slang_error* err);
/// The driver's source manager (borrowed; lives as long as the driver).
SLANG_C_API slang_source_manager slang_driver_source_manager(slang_driver driver);
/// The parsed syntax trees (borrowed; retain one to keep it beyond the driver).
SLANG_C_API uint32_t slang_driver_tree_count(slang_driver driver);
SLANG_C_API slang_syntax_tree slang_driver_tree(slang_driver driver, uint32_t index);
/// Creates a compilation from the parsed trees with the options given on the
/// command line, ORing `extra_flags` (a bitmask of slang_compilation_flag)
/// into the compilation flags — pass SLANG_COMP_DISABLE_INSTANCE_CACHING to
/// make the result totalizable by SLANG_FREEZE_ELABORATE_ALL, or 0 for none.
/// Owned by the caller, but it borrows the driver's source manager and so must
/// be destroyed before the driver.
SLANG_C_API slang_compilation slang_driver_create_compilation(slang_driver driver,
                                                              uint32_t extra_flags,
                                                              slang_error* err);
/// Reports the compilation's diagnostics through the driver's configured
/// diagnostic output (colors, `--diag-*` options, error limits).
SLANG_C_API void slang_driver_report_compilation(slang_driver driver, slang_compilation comp,
                                                 bool quiet, slang_error* err);
/// Prints the summary line ("Build succeeded: ...") and returns whether the
/// run had no errors.
SLANG_C_API bool slang_driver_report_diagnostics(slang_driver driver, bool quiet, slang_error* err);
/* ------------------------------------------------------------------------- */
/* Analysis                                                                   */
/* ------------------------------------------------------------------------- */

/// The result of running slang's semantic analysis passes (unused-code,
/// multi-driver, case, and related lints, plus driver tracking) over a
/// compilation. Opaque; free with slang_analysis_destroy.
typedef struct slang_analysis_t* slang_analysis;
/// Runs analysis over a compilation (which is finalized first). `flags` is a
/// bitmask of slang_analysis_flag; `threads` is the worker-thread count (0
/// lets slang choose). The compilation must outlive the returned handle.
SLANG_C_API slang_analysis slang_analysis_run(slang_compilation comp, uint32_t flags,
                                              uint32_t threads, slang_error* err);
/// Listeners invoked during analysis, once per analyzed procedure, scope or
/// assertion. The `slang_ast` is the relevant symbol: the procedure
/// (`always`/`initial`/`final` block or subroutine), the scope's symbol, or the
/// assertion's containing symbol. With more than one worker thread they may be
/// called concurrently, so they must be thread-safe, and must not throw or let
/// an exception escape. history: since 1.1.
typedef void (*slang_procedure_listener)(slang_ast procedure, void* user);
typedef void (*slang_scope_listener)(slang_ast scope, void* user);
typedef void (*slang_assertion_listener)(slang_ast containing_symbol, void* user);
/// A set of analysis listeners; any callback may be NULL (not registered). All
/// share the one `user` pointer. history: since 1.1.
typedef struct slang_analysis_listeners {
    slang_procedure_listener on_procedure;
    slang_scope_listener on_scope;
    slang_assertion_listener on_assertion;
    void* user;
} slang_analysis_listeners;
/// Like slang_analysis_run, but registers `listeners` before analyzing, so each
/// analyzed procedure/scope/assertion is reported as it is processed. A NULL
/// `listeners`, or one whose callbacks are all NULL, behaves exactly like
/// slang_analysis_run. history: since 1.1.
SLANG_C_API slang_analysis slang_analysis_run_listening(slang_compilation comp, uint32_t flags,
                                                        uint32_t threads,
                                                        const slang_analysis_listeners* listeners,
                                                        slang_error* err);
/// Destroys an analysis result.
SLANG_C_API void slang_analysis_destroy(slang_analysis analysis);
/// The diagnostics produced by analysis (the lints selected by the flags).
/// Owned by the caller; free with slang_diagnostics_destroy.
SLANG_C_API slang_diagnostics slang_analysis_diagnostics(slang_analysis analysis, slang_error* err);
/// How a value is driven.
typedef enum slang_driver_kind {
    SLANG_DRIVER_PROCEDURAL = 0,
    SLANG_DRIVER_CONTINUOUS = 1,
    SLANG_DRIVER_OTHER = 2,
} slang_driver_kind;
/// One driver of a value: an assignment or connection that writes it.
typedef struct slang_driver_info {
    slang_driver_kind kind;
    /// Bit 0: the driver is an input port. Bit 1: a unidirectional port.
    /// Bit 2: a clocking-block variable.
    uint32_t flags;
    /// The source range of the driving expression.
    slang_range range;
    /// The symbol (procedure, continuous-assign, ...) the driver is inside.
    slang_ast containing_symbol;
} slang_driver_info;
/// The number of procedures (`always`/`initial`/`final` blocks, continuous
/// assignments, subroutines) that were analyzed in a scope symbol (a module
/// instance body, package, ...). Zero if `scope` is not an analyzed scope.
SLANG_C_API uint32_t slang_analysis_scope_procedure_count(slang_analysis analysis, slang_ast scope);
/// The analyzed symbol of procedure `index` in a scope (e.g. a ProceduralBlock
/// or ContinuousAssign symbol). Null if out of range.
SLANG_C_API slang_ast slang_analysis_scope_procedure(slang_analysis analysis, slang_ast scope,
                                                     uint32_t index);
/// True if procedure `index` in `scope` has an inferred clock (it is a clocked
/// procedure). `index` out of range yields false.
SLANG_C_API bool slang_analysis_procedure_has_clock(slang_analysis analysis, slang_ast scope,
                                                    uint32_t index);
/// The number of drivers of a value symbol (an assignment or connection that
/// writes it). Zero if `value` is not a value symbol.
SLANG_C_API uint32_t slang_analysis_driver_count(slang_analysis analysis, slang_ast value);
/// Fetches driver `index` of a value symbol. Returns false if out of range.
SLANG_C_API bool slang_analysis_driver(slang_analysis analysis, slang_ast value, uint32_t index,
                                       slang_driver_info* out);
/* ------------------------------------------------------------------------- */
/* Custom dataflow analysis                                                   */
/* ------------------------------------------------------------------------- */

/// A dataflow event delivered to a lattice's transfer function as slang walks
/// a procedure's control flow.
typedef struct slang_dfa_event {
    /// See slang_dfa_event_kind.
    uint32_t kind;
    /// The value symbol read or written (SLANG_DFA_READ / SLANG_DFA_WRITE), or
    /// the null AST for a call.
    slang_ast symbol;
    /// The expression node the event occurred at.
    slang_ast node;
} slang_dfa_event;
/// An opaque handle to the running analysis's own context, passed to
/// slang_dfa_lattice::on_case_begin / on_conditional_begin / on_loop_begin.
/// Valid only for the duration of the callback that received it — do not
/// retain it. Mirrors what pyslang's PyFlowAnalysis exposes to Python
/// callbacks as methods on the analysis object itself (getCurrentState,
/// isBad, getEvalCtx). history: since 1.3.
typedef struct slang_dfa_ctx_t* slang_dfa_ctx;
/// A caller-defined lattice and transfer function for a forward dataflow
/// analysis. slang drives a procedure's control-flow graph and calls these to
/// create, copy, merge and evolve the abstract state, which is an opaque
/// caller-owned pointer (`void*`). All callbacks receive the `user` pointer
/// passed to slang_dfa_run, and none may unwind into the library.
///
/// The lattice's merge operations are named for the control-flow point they run
/// at, not for a fixed set-theoretic operation: `join` runs where branches
/// rejoin, `meet` at loop back-edges. A "must" analysis makes both intersect; a
/// "may" analysis makes both union. `state` mutations in `transfer` are exact
/// for SLANG_DFA_WRITE events (always visited with a definite state) and
/// best-effort for reads inside compound short-circuit conditions.
typedef struct slang_dfa_lattice {
    /// Creates the entry/top state.
    void* (*top)(void* user);
    /// Creates the unreachable/bottom state.
    void* (*bottom)(void* user);
    /// Deep-copies a state.
    void* (*clone)(void* user, const void* state);
    /// Merges `other` into `into` where branches rejoin.
    void (*join)(void* user, void* into, const void* other);
    /// Merges `other` into `into` at a loop back-edge.
    void (*meet)(void* user, void* into, const void* other);
    /// Applies `event` to `state`.
    void (*transfer)(void* user, void* state, const slang_dfa_event* event);
    /// Frees a state.
    void (*drop)(void* user, void* state);

    /// Optional (may be null). Called when the analysis begins visiting a
    /// case statement, before visiting any of its branches (slang::
    /// analysis::AbstractFlowAnalysis::visitStmt(const CaseStatement&),
    /// exposed to pyslang as PyFlowAnalysis's onCaseBegin callback). `stmt`
    /// has domain SLANG_AST_STATEMENT.
    void (*on_case_begin)(void* user, slang_dfa_ctx ctx, slang_ast stmt);
    /// Optional (may be null). Called when the analysis begins visiting a
    /// conditional (if/else) statement, before visiting its branches
    /// (slang::analysis::AbstractFlowAnalysis::visitStmt(const
    /// ConditionalStatement&), exposed to pyslang as PyFlowAnalysis's
    /// onConditionalBegin callback). `stmt` has domain SLANG_AST_STATEMENT.
    void (*on_conditional_begin)(void* user, slang_dfa_ctx ctx, slang_ast stmt);
    /// Optional (may be null). Called when the analysis begins visiting any
    /// loop statement (for/while/do-while/forever/foreach/repeat), before
    /// its body (exposed to pyslang as PyFlowAnalysis's onLoopBegin
    /// callback). `stmt` has domain SLANG_AST_STATEMENT.
    void (*on_loop_begin)(void* user, slang_dfa_ctx ctx, slang_ast stmt);
} slang_dfa_lattice;
/// Runs the caller's forward dataflow analysis over a procedure symbol (an
/// `always`/`initial`/`final` block, a subroutine, or a continuous assign).
/// Returns the exit state (a fresh copy the caller owns and must free with
/// `lattice->drop`), or NULL on error or if `procedure` is not a procedure.
SLANG_C_API void* slang_dfa_run(slang_compilation comp, slang_ast procedure,
                                const slang_dfa_lattice* lattice, void* user, slang_error* err);