rust/sv-lang-sys/src/lib.rs


    // Driver
    pub fn slang_driver_create(err: *mut slang_error) -> slang_driver;
    pub fn slang_driver_destroy(driver: slang_driver);
    pub fn slang_driver_add_option(
        driver: slang_driver,
        names: *const c_char,
        names_len: usize,
        kind: slang_option_kind,
        description: *const c_char,
        description_len: usize,
        value_name: *const c_char,
        value_name_len: usize,
        err: *mut slang_error,
    );
    pub fn slang_driver_parse_args(
        driver: slang_driver,
        argc: c_int,
        argv: *const *const c_char,
        err: *mut slang_error,
    ) -> bool;
    pub fn slang_driver_option_flag(
        driver: slang_driver,
        names: *const c_char,
        names_len: usize,
        out: *mut bool,
    ) -> bool;
    pub fn slang_driver_option_int(
        driver: slang_driver,
        names: *const c_char,
        names_len: usize,
        out: *mut i64,
    ) -> bool;
    pub fn slang_driver_option_string(
        driver: slang_driver,
        names: *const c_char,
        names_len: usize,
        out: *mut slang_str,
    ) -> bool;
    pub fn slang_driver_help_text(
        driver: slang_driver,
        overview: *const c_char,
        overview_len: usize,
        err: *mut slang_error,
    ) -> slang_str;
    pub fn slang_driver_process_options(driver: slang_driver, err: *mut slang_error) -> bool;
    pub fn slang_driver_parse_sources(driver: slang_driver, err: *mut slang_error) -> bool;
    pub fn slang_driver_source_manager(driver: slang_driver) -> slang_source_manager;
    pub fn slang_driver_tree_count(driver: slang_driver) -> u32;
    pub fn slang_driver_tree(driver: slang_driver, index: u32) -> slang_syntax_tree;
    pub fn slang_driver_create_compilation(
        driver: slang_driver,
        extra_flags: u32,
        err: *mut slang_error,
    ) -> slang_compilation;
    pub fn slang_driver_report_compilation(
        driver: slang_driver,
        comp: slang_compilation,
        quiet: bool,
        err: *mut slang_error,
    );
    pub fn slang_driver_report_diagnostics(
        driver: slang_driver,
        quiet: bool,
        err: *mut slang_error,
    ) -> bool;

    // Analysis
    pub fn slang_analysis_run(
        comp: slang_compilation,
        flags: u32,
        threads: u32,
        err: *mut slang_error,
    ) -> slang_analysis;
    pub fn slang_analysis_run_listening(
        comp: slang_compilation,
        flags: u32,
        threads: u32,
        listeners: *const slang_analysis_listeners,
        err: *mut slang_error,
    ) -> slang_analysis;
    pub fn slang_analysis_destroy(analysis: slang_analysis);
    pub fn slang_analysis_diagnostics(
        analysis: slang_analysis,
        err: *mut slang_error,
    ) -> slang_diagnostics;
    pub fn slang_analysis_scope_procedure_count(analysis: slang_analysis, scope: slang_ast) -> u32;
    pub fn slang_analysis_scope_procedure(
        analysis: slang_analysis,
        scope: slang_ast,
        index: u32,
    ) -> slang_ast;
    pub fn slang_analysis_procedure_has_clock(
        analysis: slang_analysis,
        scope: slang_ast,
        index: u32,
    ) -> bool;
    pub fn slang_analysis_driver_count(analysis: slang_analysis, value: slang_ast) -> u32;
    pub fn slang_analysis_driver(
        analysis: slang_analysis,
        value: slang_ast,
        index: u32,
        out: *mut slang_driver_info,
    ) -> bool;

    pub fn slang_dfa_run(
        comp: slang_compilation,
        procedure: slang_ast,
        lattice: *const slang_dfa_lattice,
        user: *mut c_void,
        err: *mut slang_error,
    ) -> *mut c_void;
}
